Changelog for Shake

    #49, add shakeColor and --color flags
    #490, recommend -threaded as standard
    #517, ignore ./ in FilePattern
    Require extra-1.5.3
    #499, add a filePattern function, like ?== but with the matches
    #474, never spawn user actions unmasked
    Allow user arguments to replace builtin arguments
    #522, make copyFile create directories if necessary
    #516, add an example for withTempDir
    #514, expose more about cmd arguments
    #523, #524, make sure phony doesn't run its dependencies first
    #515, add cmd_ function
    #506, allow duplicate type names in different modules
    #503, require shakeExtra to obey the sensible invariants
    #503, add getShakeExtra/addShakeExtra
    #492, fix the single letter flag documentation
    Expose 'Process' from Development.Shake
    #495, remove dangling link from LICENSE
    #436, remove Assume, switch to Rebuild
    #419, remove --assume-old and --assume-new, which never worked
    Remove support for running Makefile scripts
    Add getShakeOptionsRules, to get ShakeOptions in Rules
    #479, improve the robustness of the Pool tests
    #481, document how to raise errors in Action
    Delete the deprecated system* functions
    #427, check stored value after checking dependencies
    Significant changes to defining custom rules
    Delete the deprecated defaultRule
    IMPORTANT: Incompatible on disk format change
    #428, don't persist errors to the database
0.15.11
    #488, make sure parallel tracks dependencies
    #513, permit process-1.4.3.0 and above
0.15.10
    #465, fix phony names which clash with directories
0.15.9
    Documentation tweaks
    Optimise the thread pool
    Fix progress output through wget
0.15.8
    Extra base bounds to rule out building on GHC 7.4
0.15.7
    Require extra-1.4.8
    #457, better error message when calling need on a directory
    #456, use displayException for inner exceptions
    Improve the documentation for priority/alternative